# Muze

./: CMakeLists.txt  main.cc
include/core/: engine.hh  event.hh  input.hh  render.hh  time.hh  window.hh
include/game/: app.hh
include/utils/: debug.hh  error.hh  service.hh
src/core/: engine.cc  event.cc  window.cc
src/game/: app.cc
